updated photo for catch exercise and slide

--- a/slides/u2-d05-tidy-data/u2-d05-tidy-data.Rmd
+++ b/slides/u2-d05-tidy-data/u2-d05-tidy-data.Rmd
@@ -133,7 +133,7 @@ starwars %>%
 .pull-left[
 ```{r echo=FALSE}
 starwars %>%
-  group_by(gender) %>%
+  group_by(species) %>%
   summarize(avg_ht = mean(height, na.rm = TRUE))
 ```
 ]
@@ -145,7 +145,7 @@ starwars %>%
 .pull-right[
 ```{r eval=FALSE}
 starwars %>%
-  group_by(gender) %>%
+  group_by(species) %>%
   summarize(
     avg_ht = mean(height, na.rm = TRUE)
     )
