--- a/slides/u2-d06-grammar-wrangle/u2-d06-grammar-wrangle.Rmd
+++ b/slides/u2-d06-grammar-wrangle/u2-d06-grammar-wrangle.Rmd
@@ -405,8 +405,9 @@ ggplot(catch_data, aes(x = region, y = values)) +
 
 ## Pipe Keyboard Shortcut
 
-Windows - Cntrl + Shift + M
-Mac - Command + Shift + M
+  **Windows** - Cntrl + Shift + M
+
+  **Mac** - Command + Shift + M
 
 ---
 
