--- a/labs/lab-03/lab-03-nobel-laureates.Rmd
+++ b/labs/lab-03/lab-03-nobel-laureates.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Lab 03 - Nobel laureates"
+title: "Lab 03 - Great Lakes Fish Stocking"
 output: 
   tufte::tufte_html:
     css: ../lab.css
@@ -12,140 +12,35 @@ link-citations: yes
 knitr::opts_chunk$set(eval = TRUE)
 ```
 
-In January 2017, Buzzfeed published an article on why Nobel laureates show immigration is so important for American science.
-You can read the article [here](https://www.buzzfeednews.com/article/peteraldhous/immigration-and-science).
-In the article they show that while most living Nobel laureates in the sciences are based in the US, many of them were born in other countries.
-This is one reason why scientific leaders say that immigration is vital for progress.
-In this lab we will work with the data from this article to recreate some of their visualizations as well as explore new questions.
+# Great Lakes Fish Stocking Database
+
+For Lab 03 you'll be using the [Great Lakes Fish Stocking database](http://www.glfc.org/fishstocking/index.htm) which provides access to a centralized, comprehensive database of all fish stocked from artificial propagation into the Great Lakes since 1950.
+The database was developed through a peer review process that involved fishery professionals from every agency that stocks fish into the Great Lakes.
+Fishery managers use this database to help them understand the food and habitat needs of stocked predators in each lake.
+The database is updated, maintained, and hosted by the U.S.
+Fish and Wildlife Service.
 
 # Learning goals
 
--   Collaborating on GitHub and resolving merge conflicts
--   Replicating published results
--   Data wrangling and visualisation
-
-# Lab prep
-
-You have two tasks you should complete before the lab:
-
--   **Task 1:** Read the Buzzfeed article titled [*These Nobel Prize Winners Show Why Immigration Is So Important For American Science*](https://www.buzzfeednews.com/article/peteraldhous/immigration-and-science)*.* We will replicate this analysis in the workshop so it's crucial that you're familiar with it ahead of time.
--   **Task 2:** Read about merge conflicts below. The merge conflict exercise we'll start with during the lab will assume that you have this background information.
-
-## Merges and merge conflicts
-
-This is the second week you're working in teams, so we're going to make things a little more interesting and let all of you make changes and push those changes to your team repository.
-Sometimes things will go swimmingly, and sometimes you'll run into merge conflicts.
-So our first task today is to walk you through a merge conflict!
-
--   Pushing to a repo replaces the code on GitHub with the code you have on your computer.
--   If a collaborator has made a change to your repo on GitHub that you haven't incorporated into your local work, GitHub will stop you from pushing to the repo because this could overwrite your collaborator's work!
--   So you need to explicitly "merge" your collaborator's work before you can push.
--   If your and your collaborator's changes are in different files or in different parts of the same file, git merges the work for you automatically when you \*pull\*.
--   If you both changed the same part of a file, git will produce a \*\*merge conflict\*\* because it doesn't know how which change you want to keep and which change you want to overwrite.
-
-Git will put conflict markers in your code that look like:
-
-    <<<<<<< HEAD 
-
-    See also: [dplyr documentation](https://dplyr.tidyverse.org/)   
-
-    ======= 
-
-    See also [ggplot2 documentation](https://ggplot2.tidyverse.org/)  
-
-    >>>>>>> some1alpha2numeric3string4
-
-The `===`s separate *your* changes (top) from *their* changes (bottom).
-
-Note that on top you see the word `HEAD`, which indicates that these are your changes.
-
-And at the bottom you see `some1alpha2numeric3string4` (well, it probably looks more like `28e7b2ceb39972085a0860892062810fb812a08f`).
-
-This is the **hash** (a unique identifier) of the commit your collaborator made with the conflicting change.
-
-Your job is to *reconcile* the changes: edit the file so that it incorporates the best of both versions and delete the `<<<`, `===`, and `>>>` lines.
-Then you can stage and commit the result.
-
-# Merge conflict activity
-
-## Setup
-
--   Clone the repo and open the .Rmd file.
--   Assign the numbers 1, 2, 3, and 4 to each of the team members. If your team has fewer than 4 people, some people will need to have multiple numbers. If your team has more than 4 people, some people will need to share some numbers.
-
-## Let's cause a merge conflict!
-
-Our goal is to see two different types of merges: first we'll see a type of merge that git can't figure out on its own how to do on its own (a **merge conflict**) and requires human intervention, then another type of where that git can figure out how to do without human intervention.
-
-Doing this will require some tight choreography, so pay attention!
-
-Take turns in completing the exercise, only one member at a time.
-**Others should just watch, not doing anything on their own projects (this includes not even pulling changes!)** until they are instructed to.
-If you feel like you won't be able to resist the urge to touch your computer when it's not your turn, we recommend putting your hands in your pockets or sitting on them!
-
-**Before starting**: everyone should have the repo cloned and know which role number(s) they are.
-
-**Role 1:**
-
--   Change the team name to your actual team name.
--   Knit, commit, push.
-
-🛑 Make sure the previous role has finished before moving on to the next step.
-
-**Role 2:**
-
--   Change the team name to some other word.
--   Knit, commit, push. You should get an error.
--   Pull. Take a look at the document with the merge conflict.
--   Clear the merge conflict by editing the document to choose the correct/preferred change.
--   Knit.
--   **Click the Stage checkbox** for all files in your Git tab. Make sure they all have check marks, not filled-in boxes.
--   Commit and push.
-
-🛑 Make sure the previous role has finished before moving on to the next step.
-
-**Role 3:**
-
--   Change the a label of the first code chunk
--   Knit, commit, push. You should get an error.
--   Pull. No merge conflicts should occur, but you should see a message about merging.
--   Now push.
-
-🛑 Make sure the previous role has finished before moving on to the next step.
-
-**Role 4:**
-
--   Change the label of the first code chunk to something other than previous role did.
--   Knit, commit, push. You should get an error.
--   Pull. Take a look at the document with the merge conflict. Clear the merge conflict by choosing the correct/preferred change. Commit, and push.
-
-🛑 Make sure the previous role has finished before moving on to the next step.
-
-**Everyone:** Pull, and observe the changes in your document.
-
-## Tips for collaborating via GitHub
-
--   Always pull first before you start working.
--   Resolve a merge conflict (commit and push) *before* continuing your work. Never do new work while resolving a merge conflict.
--   Knit, commit, and push often to minimize merge conflicts and/or to make merge conflicts easier to resolve.
--   If you find yourself in a situation that is difficult to resolve, ask questions ASAP. Don't let it linger and get bigger.
+-   Practicing data wrangling and data visualization
 
 # Getting started
 
-Go to the course GitHub organization and locate your lab repo, which should be named `lab-03-nobel-laureates-YOUR_GITHUB_USERNAME`.
-Grab the URL of the repo, and clone it in RStudio.
-First, open the R Markdown document `lab-03.Rmd` and Knit it.
-Make sure it compiles without errors.
-The output will be in the file markdown `.md` file with the same name.
+If you're looking at these instructions you've already done the following steps, but as a reminder:
+
+-   Go to the course GitHub organization and locate your Unit 3 repo, which should be named `unit-3-YOUR_LAST_NAME`.
+-   Grab the URL of the repo, and clone it in RStudio.
+-   First, open the R Markdown instructions `lab-O3-...Rmd` and the lab starter `lab-03.Rmd` and Knit them
+-   Make sure they compile without errors.
 
 ## Warm up
 
 Before we introduce the data, let's warm up with some simple exercises.
 
--   Update the YAML, changing the author name to your name, and **knit** the document.
--   Commit your changes with a meaningful commit message.
--   Push your changes to GitHub.
--   Go to your repo on GitHub and confirm that your changes are visible in your Rmd **and** md files. If anything is missing, commit and push again.
+-   Update the YAML, changing the author name to your name, and **knit** the document. 🧶
+-   Commit your changes with a meaningful commit message. ✅
+-   Push your changes to GitHub.️ ⬆️
+-   Go to your repo on GitHub and confirm that your changes are visible in your Rmd files.
 
 ## Packages
 
@@ -159,7 +54,7 @@ library(tidyverse)
 
 ## Data
 
-The dataset for this assignment can be found as a CSv (comma separated values) file in the `data` folder of your repository.
+The dataset for this assignment can be found as a CSV (comma separated values) file in the `data` folder of your repository.
 You can read it in using the following.
 
 ```{r load-data, message = FALSE}
@@ -198,13 +93,6 @@ In these cases the variables below reflect a different name than their counterpa
 -   `died_city_original`: Original city where laureate died
 -   `city_original`: Original city where laureate lived at the time of winning the award
 -   `country_original`: Original country where laureate lived at the time of winning the award
-
-# Exercises
-
-Take turns answering the exercises.
-Make sure each team member gets to commit to the repo by the time you submit your work.
-And make sure that the person taking the lead for an exercise is sharing their screen.
-You don't have to switch at each exercise, you can find your a cadence that works for your team and stick to it.
 
 ## Get to know your data
 
@@ -304,10 +192,3 @@ Note that your bar plot won't exactly match the one from the Buzzfeed article. T
 🧶 ✅ ⬆️ Knit, *commit, and push your changes to GitHub with an appropriate commit message. Make sure to commit and push all changed files so that your Git pane is cleared up afterwards and review the md document on GitHub to make sure you're happy with the final state of your work.*
 
 Now go back through your write up to make sure you've answered all questions and all of your R chunks are properly labelled.
-Once you decide as a team that you're done with this lab, all members of the team should pull the changes and knit the R Markdown document to confirm that they can reproduce the report.
-
-# Interested in how Buzzfeed made their visualizations?
-
-The plots in the Buzzfeed article are called waffle plots.
-You can find the code used for making these plots in Buzzfeed's GitHub repo (yes, they have one!) [here](https://buzzfeednews.github.io/2017-01-immigration-and-science/).
-You're not expected to recreate them as part of your assignment, but you're welcomed to do so for fun!
